Use target compile options when adding compile options for spdlog
Instead of setting the global compile options, add the compile options
needed for spdlog to `ADDITIONAL_PUBLIC_COMPILE_OPTIONS`, which is used
by every target. This ensures that the compile option is exported
correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,8 +124,9 @@ endif(WIN32)
 if(UNIX)
     find_package(spdlog)
     if(spdlog_FOUND)
-        add_compile_options(-DHAVE_SYSTEM_SPDLOG)
-        link_libraries(spdlog::spdlog)
+        message(STATUS "Found spdlog")
+        set(ADDITIONAL_PUBLIC_COMPILE_OPTIONS -DHAVE_SYSTEM_SPDLOG)
+        set(ADDITIONAL_LINK_LIBRARIES ${ADDITIONAL_LINK_LIBRARIES} spdlog::spdlog)
     endif()
 endif()
 
