--- a/libopcuacore.pc.in
+++ b/libopcuacore.pc.in
@@ -2,10 +2,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+extra_cflags=@interface_cflags@
 
 Name: libopcuacore
 Description: Opcua core infrastructure.
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir}
+Cflags: -I${includedir} ${extra_cflags}
 Libs: -L${libdir} -lopcuacore
 
