--- a/libopcuaprotocol.pc.in
+++ b/libopcuaprotocol.pc.in
@@ -2,10 +2,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+extra_cflags=@interface_cflags@
 
 Name: libopcuaprotocol
 Description: Opcua protocol library.
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir}
+Cflags: -I${includedir} ${extra_cflags}
 Libs: -L${libdir} -lopcuaprotocol
 
