Don't set -fPIC when compiling with MINGW on Windows
It makes a lot of noise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,11 @@ else(MSVC)
     SET(EXECUTABLE_CXX_FLAGS)
     SET(DYNAMIC_LIBRARY_CXX_FLAGS)
     SET(D -D)
-    set(CMAKE_CXX_FLAGS " -std=c++11 -Wall -fPIC ${CMAKE_CXX_FLAGS} ")
+    if(WIN32)
+        set(CMAKE_CXX_FLAGS " -std=c++11 -Wall ${CMAKE_CXX_FLAGS} ")
+    else(WIN32)
+        set(CMAKE_CXX_FLAGS " -std=c++11 -Wall -fPIC ${CMAKE_CXX_FLAGS} ")
+    endif()
     SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS_INIT} $ENV{LDFLAGS}")
     #set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
 endif()
